tests/NormalTests/paczka1/small_fuzzy/62690619.err
Error in line 8: CUE A401 95,38
Error in line 6: ViO A401 11,5
